{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 2853,
  "lineage": "414aa1fb-4606-e369-01d1-e7de0d2fc02c",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654335668:route-table/rtb-0f2f48c6b2c7be116",
            "default_route_table_id": "rtb-0f2f48c6b2c7be116",
            "id": "rtb-0f2f48c6b2c7be116",
            "owner_id": "654654335668",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "DefaultRT: Do not Use"
            },
            "tags_all": {
              "Name": "DefaultRT: Do not Use"
            },
            "timeouts": null,
            "vpc_id": "vpc-02aef8e1ba14b3bca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.networking.aws_vpc.main_vpc",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654335668:security-group/sg-000f67ed74539ae26",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-000f67ed74539ae26",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "654654335668",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DefaultSG: Do not Use"
            },
            "tags_all": {
              "Name": "DefaultSG: Do not Use"
            },
            "vpc_id": "vpc-02aef8e1ba14b3bca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.networking.aws_vpc.main_vpc",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03936fbab8aa0f4a1",
            "arn": "arn:aws:ec2:us-east-1:654654335668:elastic-ip/eipalloc-03936fbab8aa0f4a1",
            "domain": "vpc",
            "id": "eipalloc-03936fbab8aa0f4a1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-72-181-96.compute-1.amazonaws.com",
            "public_ip": "52.72.181.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-nat-eip",
              "Owner": "blakkbrother",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-nat-eip",
              "Owner": "blakkbrother",
              "Region": "us-east-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654335668:internet-gateway/igw-07d388cff637b0709",
            "id": "igw-07d388cff637b0709",
            "owner_id": "654654335668",
            "tags": {
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-igw",
              "Owner": "blakkbrother",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-igw",
              "Owner": "blakkbrother",
              "Region": "us-east-1"
            },
            "vpc_id": "vpc-02aef8e1ba14b3bca"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.networking.aws_vpc.main_vpc",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03936fbab8aa0f4a1",
            "association_id": "eipassoc-091dd1797c47aca82",
            "connectivity_type": "public",
            "id": "nat-01cedce3cd9c02283",
            "network_interface_id": "eni-0dbab1cbcfa699cb5",
            "private_ip": "10.0.0.211",
            "public_ip": "52.72.181.96",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01582d36436fd3242",
            "tags": {
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-ngw",
              "Owner": "blakkbrother",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-ngw",
              "Owner": "blakkbrother",
              "Region": "us-east-1"
            }
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_subnet.web_subnet",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654335668:route-table/rtb-0fc94589c9ef20f24",
            "id": "rtb-0fc94589c9ef20f24",
            "owner_id": "654654335668",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01cedce3cd9c02283",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-app-rtb",
              "Owner": "blakkbrother",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-app-rtb",
              "Owner": "blakkbrother",
              "Region": "us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02aef8e1ba14b3bca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_subnet.web_subnet",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654335668:route-table/rtb-01632835050044003",
            "id": "rtb-01632835050044003",
            "owner_id": "654654335668",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01cedce3cd9c02283",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-db-rtb",
              "Owner": "blakkbrother",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-db-rtb",
              "Owner": "blakkbrother",
              "Region": "us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02aef8e1ba14b3bca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_subnet.web_subnet",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654335668:route-table/rtb-0be02bd5dda555421",
            "id": "rtb-0be02bd5dda555421",
            "owner_id": "654654335668",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d388cff637b0709",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-pub-rtb",
              "Owner": "blakkbrother",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-pub-rtb",
              "Owner": "blakkbrother",
              "Region": "us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02aef8e1ba14b3bca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.networking.aws_internet_gateway.main_igw",
            "module.networking.aws_vpc.main_vpc",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b953cf79646e6e7b",
            "route_table_id": "rtb-0fc94589c9ef20f24",
            "subnet_id": "subnet-0344c23dce6c23338"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.app_route_table",
            "module.networking.aws_subnet.app_subnet",
            "module.networking.aws_subnet.web_subnet",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0401bd7b094767b",
            "route_table_id": "rtb-0fc94589c9ef20f24",
            "subnet_id": "subnet-066957bb66e3b715f"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.app_route_table",
            "module.networking.aws_subnet.app_subnet",
            "module.networking.aws_subnet.web_subnet",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cf6114e79cf59dd",
            "route_table_id": "rtb-01632835050044003",
            "subnet_id": "subnet-09a77f107c5212d4d"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.db_route_table",
            "module.networking.aws_subnet.db_subnet",
            "module.networking.aws_subnet.web_subnet",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc93459782cb62b3",
            "route_table_id": "rtb-01632835050044003",
            "subnet_id": "subnet-047dbc0c45ffad4a8"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.db_route_table",
            "module.networking.aws_subnet.db_subnet",
            "module.networking.aws_subnet.web_subnet",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c99de8d750edd8bc",
            "route_table_id": "rtb-0be02bd5dda555421",
            "subnet_id": "subnet-01582d36436fd3242"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.networking.aws_internet_gateway.main_igw",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.web_subnet",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08209181307396864",
            "route_table_id": "rtb-0be02bd5dda555421",
            "subnet_id": "subnet-03550821743ecc778"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.networking.aws_internet_gateway.main_igw",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.web_subnet",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654335668:subnet/subnet-0344c23dce6c23338",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0344c23dce6c23338",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654335668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AName": "blakkbrother-dev-us-east-1-app-subnet-us-east-1a",
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-app-subnet-1",
              "Owner": "blakkbrother",
              "Region": "us-east-1",
              "Type": "Private"
            },
            "tags_all": {
              "AName": "blakkbrother-dev-us-east-1-app-subnet-us-east-1a",
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-app-subnet-1",
              "Owner": "blakkbrother",
              "Region": "us-east-1",
              "Type": "Private"
            },
            "vpc_id": "vpc-02aef8e1ba14b3bca"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654335668:subnet/subnet-066957bb66e3b715f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066957bb66e3b715f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654335668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AName": "blakkbrother-dev-us-east-1-app-subnet-us-east-1b",
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-app-subnet-2",
              "Owner": "blakkbrother",
              "Region": "us-east-1",
              "Type": "Private"
            },
            "tags_all": {
              "AName": "blakkbrother-dev-us-east-1-app-subnet-us-east-1b",
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-app-subnet-2",
              "Owner": "blakkbrother",
              "Region": "us-east-1",
              "Type": "Private"
            },
            "vpc_id": "vpc-02aef8e1ba14b3bca"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654335668:subnet/subnet-09a77f107c5212d4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a77f107c5212d4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654335668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AName": "blakkbrother-dev-us-east-1-db-subnet-us-east-1a",
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-db-subnet-1",
              "Owner": "blakkbrother",
              "Region": "us-east-1",
              "Type": "Private"
            },
            "tags_all": {
              "AName": "blakkbrother-dev-us-east-1-db-subnet-us-east-1a",
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-db-subnet-1",
              "Owner": "blakkbrother",
              "Region": "us-east-1",
              "Type": "Private"
            },
            "vpc_id": "vpc-02aef8e1ba14b3bca"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654335668:subnet/subnet-047dbc0c45ffad4a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047dbc0c45ffad4a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654335668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AName": "blakkbrother-dev-us-east-1-db-subnet-us-east-1b",
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-db-subnet-2",
              "Owner": "blakkbrother",
              "Region": "us-east-1",
              "Type": "Private"
            },
            "tags_all": {
              "AName": "blakkbrother-dev-us-east-1-db-subnet-us-east-1b",
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-db-subnet-2",
              "Owner": "blakkbrother",
              "Region": "us-east-1",
              "Type": "Private"
            },
            "vpc_id": "vpc-02aef8e1ba14b3bca"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654335668:subnet/subnet-01582d36436fd3242",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01582d36436fd3242",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654335668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AName": "blakkbrother-dev-us-east-1-web-subnet-us-east-1a",
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-web-subnet-1",
              "Owner": "blakkbrother",
              "Region": "us-east-1",
              "Type": "Public"
            },
            "tags_all": {
              "AName": "blakkbrother-dev-us-east-1-web-subnet-us-east-1a",
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-web-subnet-1",
              "Owner": "blakkbrother",
              "Region": "us-east-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-02aef8e1ba14b3bca"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654335668:subnet/subnet-03550821743ecc778",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03550821743ecc778",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654335668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AName": "blakkbrother-dev-us-east-1-web-subnet-us-east-1b",
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-web-subnet-2",
              "Owner": "blakkbrother",
              "Region": "us-east-1",
              "Type": "Public"
            },
            "tags_all": {
              "AName": "blakkbrother-dev-us-east-1-web-subnet-us-east-1b",
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-web-subnet-2",
              "Owner": "blakkbrother",
              "Region": "us-east-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-02aef8e1ba14b3bca"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654335668:vpc/vpc-02aef8e1ba14b3bca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aff6753d74dc5b79",
            "default_route_table_id": "rtb-0f2f48c6b2c7be116",
            "default_security_group_id": "sg-000f67ed74539ae26",
            "dhcp_options_id": "dopt-07af1fb3f3d85bdba",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02aef8e1ba14b3bca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f2f48c6b2c7be116",
            "owner_id": "654654335668",
            "tags": {
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-vpc",
              "Owner": "blakkbrother",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-vpc",
              "Owner": "blakkbrother",
              "Region": "us-east-1"
            }
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654335668:security-group/sg-06ed4c4b0dc3c4fd6",
            "description": "Allows HTTP and HTTPS Traffic from Internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ed4c4b0dc3c4fd6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09c1d78ecf3e3b259"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "blakkbrother-dev-us-east-1-alb-sg",
            "name_prefix": "",
            "owner_id": "654654335668",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-alb-sg",
              "Owner": "blakkbrother",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-alb-sg",
              "Owner": "blakkbrother",
              "Region": "us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02aef8e1ba14b3bca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.networking.aws_default_route_table.default_route_table",
            "module.networking.aws_default_security_group.default_sg",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.main_igw",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.app_route_table",
            "module.networking.aws_route_table.db_route_table",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_route_table_association.app_subnet_assoc",
            "module.networking.aws_route_table_association.db_subnet_assoc",
            "module.networking.aws_route_table_association.web_subnet_assoc",
            "module.networking.aws_ssm_parameter.app_subnet_id",
            "module.networking.aws_ssm_parameter.db_subnet_id",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.jumpbox_subnet",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_ssm_parameter.web_subnet_id",
            "module.networking.aws_subnet.app_subnet",
            "module.networking.aws_subnet.db_subnet",
            "module.networking.aws_subnet.web_subnet",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.security.aws_security_group.jump_server_sg",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654335668:security-group/sg-0599d0e431c5ddb98",
            "description": "Allows HTTP and HTTPS Traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0599d0e431c5ddb98",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09c1d78ecf3e3b259"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06ed4c4b0dc3c4fd6"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow Traffic from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06ed4c4b0dc3c4fd6"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "blakkbrother-dev-us-east-1-ecs-sg",
            "name_prefix": "",
            "owner_id": "654654335668",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-ecs-sg",
              "Owner": "blakkbrother",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-ecs-sg",
              "Owner": "blakkbrother",
              "Region": "us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02aef8e1ba14b3bca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.networking.aws_default_route_table.default_route_table",
            "module.networking.aws_default_security_group.default_sg",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.main_igw",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.app_route_table",
            "module.networking.aws_route_table.db_route_table",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_route_table_association.app_subnet_assoc",
            "module.networking.aws_route_table_association.db_subnet_assoc",
            "module.networking.aws_route_table_association.web_subnet_assoc",
            "module.networking.aws_ssm_parameter.app_subnet_id",
            "module.networking.aws_ssm_parameter.db_subnet_id",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.jumpbox_subnet",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_ssm_parameter.web_subnet_id",
            "module.networking.aws_subnet.app_subnet",
            "module.networking.aws_subnet.db_subnet",
            "module.networking.aws_subnet.web_subnet",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.jump_server_sg",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jump_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654335668:security-group/sg-09c1d78ecf3e3b259",
            "description": "Security Group for Jump Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c1d78ecf3e3b259",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "blakkbrother-dev-us-east-1-jump-server-sg",
            "name_prefix": "",
            "owner_id": "654654335668",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-jump-server-sg",
              "Owner": "blakkbrother",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-jump-server-sg",
              "Owner": "blakkbrother",
              "Region": "us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02aef8e1ba14b3bca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.networking.aws_default_route_table.default_route_table",
            "module.networking.aws_default_security_group.default_sg",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.main_igw",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.app_route_table",
            "module.networking.aws_route_table.db_route_table",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_route_table_association.app_subnet_assoc",
            "module.networking.aws_route_table_association.db_subnet_assoc",
            "module.networking.aws_route_table_association.web_subnet_assoc",
            "module.networking.aws_ssm_parameter.app_subnet_id",
            "module.networking.aws_ssm_parameter.db_subnet_id",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.jumpbox_subnet",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_ssm_parameter.web_subnet_id",
            "module.networking.aws_subnet.app_subnet",
            "module.networking.aws_subnet.db_subnet",
            "module.networking.aws_subnet.web_subnet",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654335668:security-group/sg-0b98ac0c196ed9e72",
            "description": "Allows MySQL Traffic from ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b98ac0c196ed9e72",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0599d0e431c5ddb98",
                  "sg-09c1d78ecf3e3b259"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "blakkbrother-dev-us-east-1-rds-sg",
            "name_prefix": "",
            "owner_id": "654654335668",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-rds-sg",
              "Owner": "blakkbrother",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blakkbrother-dev-us-east-1-rds-sg",
              "Owner": "blakkbrother",
              "Region": "us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02aef8e1ba14b3bca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ecs_execution_role",
            "module.iam.aws_iam_role.ecs_task_execution_role",
            "module.iam.aws_iam_role.ecs_task_role",
            "module.iam.aws_iam_role.s3_logging_role",
            "module.iam.aws_iam_role.ssm_role",
            "module.iam.aws_iam_role_policy_attachment.ecs_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ecs_task_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.s3_logging_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.ssm_role_policy_attachment",
            "module.iam.data.aws_iam_policy_document.ssm_role_policy",
            "module.networking.aws_default_route_table.default_route_table",
            "module.networking.aws_default_security_group.default_sg",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.main_igw",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.app_route_table",
            "module.networking.aws_route_table.db_route_table",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_route_table_association.app_subnet_assoc",
            "module.networking.aws_route_table_association.db_subnet_assoc",
            "module.networking.aws_route_table_association.web_subnet_assoc",
            "module.networking.aws_ssm_parameter.app_subnet_id",
            "module.networking.aws_ssm_parameter.db_subnet_id",
            "module.networking.aws_ssm_parameter.igw_id",
            "module.networking.aws_ssm_parameter.jumpbox_subnet",
            "module.networking.aws_ssm_parameter.vpc_id",
            "module.networking.aws_ssm_parameter.web_subnet_id",
            "module.networking.aws_subnet.app_subnet",
            "module.networking.aws_subnet.db_subnet",
            "module.networking.aws_subnet.web_subnet",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.ecs_sg",
            "module.security.aws_security_group.jump_server_sg",
            "module.storage.aws_s3_bucket.log_bucket",
            "module.storage.aws_s3_bucket_logging.bucket_logging",
            "module.storage.aws_s3_bucket_public_access_block.Logging_bucket_block_public_access",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.bucket_encryption",
            "module.storage.aws_s3_bucket_versioning.Logging_bucket_versioning"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}